Add error callback support